# OpenBB_Experiments

./: .gitignore  EdgarVertexAI.ipynb  InstallOBBFromSources.txt  OBBAgentExample.ipynb  OpenBBAgent.ipynb  OpenBBAgentCli.py  OpenBBEconomicAndMarkets.ipynb  OpenBBFinancialAnalysis.ipynb  OpenBBSample.ipynb  OpenBBSamples.ipynb  README.md  applying_regexes_10ks_solution.ipynb  hor_disclosures.ipynb  mcp_client_ai.py  mcp_client_fastapi.py  openbbPlatformAsLLMTools.ipynb  openbbPlatformAsLLMTools_VertexAI.ipynb  openbbagent.ipynb  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  setup.sh
custom_extensions/mm_obb_extensions/: .gitignore  README.md  pyproject.toml
custom_extensions/mm_obb_extensions/mm_obb_extensions/: __init__.py  provider.py  router.py
custom_extensions/mm_obb_extensions/mm_obb_extensions/models/: example.py
custom_extensions/mm_obb_extensions/mm_obb_extensions/utils/: helpers.py
custom_extensions/mm_obb_extensions/tests/utils/: helpes_test.py
deploy/: run_mcp.sh
expense-tracker-ai/: QUICKSTART.md  README.md  package-lock.json  package.json  tailwind.config.ts
expense-tracker-ai/app/: globals.css  layout.tsx  page.tsx
expense-tracker-ai/components/: CategoryChart.tsx  ExpenseFilters.tsx  ExpenseForm.tsx  ExpenseListItem.tsx  Navigation.tsx  (+1 more)
openbb-mmext/: .gitignore  README.md  pyproject.toml
openbb-mmext/openbb_mmext/: __init__.py  router.py  router_cftc.py
openbb-mmext/openbb_mmext/models/: cftc.py
openbb-mmext/openbb_mmext/utils/: helpers.py
openbb-mmext/tests/: test_cftc.py
openbb-mmext/tests/record/http/test_cftc/: test_fetch_http_data_cftc.yaml
openbb-mmext/tests/utils/: test_helpers.py
openbb-mmext/tests/utils/cassettes/: test_get_nymo.yaml  test_get_nysi.yaml
openbb-mmprvds/: .gitignore  README.md  pyproject.toml
openbb-mmprvds/openbb_providers/: __init__.py  router.py
openbb-mmprvds/openbb_providers/models/: cftc.py  cftc_contracts.py  damod_provider.py  fetchers.py  finviz.py  finviz_provider.py  fmp_marketcap.py  quiverquants.py  seekingalpha.py
openbb-mmprvds/openbb_providers/utils/: cramer_utils.py  damod_utils.py  finviz_helpers.py  helpers.py  hor_fetcher.py  quiverquants_utils.py  sector_utils.py  seekingalpha_helpers.py
openbb-mmprvds/tests/: .gitignore  test_cftc_contracts_fetchers.py  test_cftc_fetchers.py  test_cramer_utils.py  test_damod_fetchers.py  test_damod_utils.py  test_finviz_fetchers.py  test_finviz_helpers.py  test_finviz_provider.py  test_fmp_marketcap_fetchers.py  test_hor_fetcher,py  test_hor_fetcher.py  test_httpplugin.py  test_parse_sa_rss.py  test_pyth_fetchers.py  test_quiverquants.py  test_quiverquants_utils.py  test_seekingalpha_fetchers.py  test_something.py
openbb-mmprvds/tests/cassettes/: test_fmp_marketcap_fetcher_no_limit.yaml  test_fmp_marketcap_fetcher_with_limit.yaml  test_sa_dividend_picks.yaml  test_sa_stock_ideas.yaml  test_some_test.yaml
openbb-mmprvds/tests/record/http/test_cftc_contracts_fetchers/: test_fetch_http_data_cftc_contracts.yaml
openbb-mmprvds/tests/record/http/test_cftc_fetchers/: test_fetch_http_data_cftc.yaml
openbb-mmprvds/tests/record/http/test_cramer_fetchers/: test_cramer_fetcher.yaml
openbb-mmprvds/tests/record/http/test_finviz_fetchers/: test_canslim_fetcher.yaml
openbb-mmprvds/tests/record/http/test_finviz_provider/: test_finviz_fetcher.yaml  test_finviz_fetcher_urllib3_v2.yaml  test_finviz_watchilst_fetcher.yaml  test_finviz_watchilst_fetcher_urllib3_v2.yaml
openbb-mmprvds/tests/record/http/test_fmp_marketcap_fetchers/: test_fmp_marketcap_fetcher_with_limit.yaml
openbb-mmprvds/tests/record/http/test_pyth_fetchers/: test_fetch_http_data_no_limit.yaml  test_fetch_http_data_vcr.yaml
openbb-mmprvds/tests/record/http/test_seekingalpha_fetchers/: test_sa_dividend_picks.yaml  test_sa_stock_ideas.yaml
openbb_mm/: README.md  pyproject.toml
openbb_mm/openbb_mm/: __init__.py  router.py
openbb_mm/openbb_mm/models/: fetchers.py
openbb_mm/openbb_mm/utils/: definitions.py  helpers.py
openbb_mm/tests/: test_pyth_fetchers.py
pyth2/: README.md  pyproject.toml
src/: government_contracts.py  stock_analysis.py
(+24 files in other folders)
