[tool.poetry]
name = "openbb-providers"
version = "1.0.84"
description = "Pyth Extension to fetch commitment of traders data"
authors = ["OpenBB <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_providers" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
cftc = "openbb_providers:cftc_provider"

[tool.poetry.plugins."openbb_core_extension"]
mmcftc = "openbb_providers.router:router"
