[tool.poetry]
name = "openbb-providers"
version = "1.0.88"
description = "Python custom  Extension for OBB"
authors = ["Marco Mistroni <mmistroni@gmail.com>"]
readme = "README.md"
packages = [{ include = "openbb_providers" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
cftc = "openbb_providers:cftc_provider"
sa_provider = "openbb_providers:sa_provider"

[tool.poetry.plugins."openbb_core_extension"]
mmext = "openbb_providers.router:router"
