[tool.poetry]
name = "openbb-providers"
version = "1.1.28"
description = "Python custom  Extension for OBB"
authors = ["Marco Mistroni <mmistroni@gmail.com>"]
readme = "README.md"
packages = [{ include = "openbb_providers" }]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
openbb-core = "^1.1.2"
openbb-devtools = { version = "^1.0.0b1" }
beautifulsoup4  = { version = "^4.12.3" }
pandas = { version = "^2.2.1" }
finvizfinance = { version = ">0.14.7" }
feedparser = { version = "^6.0.11" }
dateparser = {version = "1.2.1" }
xlrd = ">=2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
cftc = "openbb_providers:cftc_provider"
sa_provider = "openbb_providers:sa_provider"
cramer_provider = "openbb_providers:cramer_provider"
quiverquants_provider = "openbb_providers:quiverquants_provider"
damodaran_provider = "openbb_providers:damodaran_provider"
[tool.poetry.plugins."openbb_core_extension"]
mmext = "openbb_providers.router:router"
