[tool.poetry]
name = "openbb-mm"
version = "1.0.0"
description = "MM Provider Extension for the OpenBB Platform"
authors = ["OpenBB <hello@openbb.co>"]
readme = "README.md"
packages = [{ include = "openbb_mm" }]

[tool.poetry.dependencies]
python = "^3.8"
openbb-core = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_provider_extension"]
mm = "openbb_mm:mm_provider"
