[tool.poetry]
name = "mm_obb_extensions"
version = "1.0.0"
description = ""
authors = ["Marco Mistroni <mmistroni@gmail.com>"]
readme = "README.md"
packages = [{ include = "mm_obb_extensions" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
openbb-core = { version = "^1.1.0" }
openbb-devtools = { version = "^1.0.0b1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
mm_obb_extensions = "mm_obb_extensions.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
mm_obb_extensions = "mm_obb_extensions.provider:provider"
